--- a/src/blogapp/templates/blogapp/post_list.html
+++ b/src/blogapp/templates/blogapp/post_list.html
@@ -3,8 +3,10 @@
 
 {% block content %}
 {% for object in object_list %}
-<h1>{{ object.title }}</h1>
-<img src="{{ object.image.url }}" alt="image" width="200px" height="200px">
+<a href="{% url 'blogapp:detail' object.slug %}">
+    <h1>{{object.title}}</h1>
+</a>
+<img src="{{ object.image.url }}" alt="image" width="250px" height="200px">
 <p>{{object.content | truncatechars:20}}</p>
 
 {% endfor %}
