added like button

--- a/src/blogapp/templates/blogapp/post_detail.html
+++ b/src/blogapp/templates/blogapp/post_detail.html
@@ -19,6 +19,12 @@
 <hr>
 {% endfor %}
     
+<form action="{% url 'blogapp:like' object.slug %}" method="post">
+    {% csrf_token %}
+    <input type="hidden", name="post">
+    <input type="hidden", name="user">
+    <button type="submit" >Like</button> {{object.like_count}}
+</form>
 
 {% endblock content %}
     
