--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -14,6 +14,16 @@
   </head>
   <body>
         {% include 'navbar.html' %}
+        <div class="container">
+          {% if messages %}
+          {% for message in messages%}
+          <div class="alert alert-{{message.tags}}">
+            {{message}}
+          </div>
+        </div>
+          {% endfor %}
+          {% endif %}
+
       <div class="container">
         {% block content %}
           
